add final code infoo

--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>भगवद्‌गीता</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <hr>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;भगवद्‌गीता
+    </h1>
+    <hr><br>
+   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+   <img src="BhagavadGita-19th-century-Illustrated-Sanskrit-Chapter_1.20.21.jpg" alt="BhagavadGita" id="BhagavadGita">
+   <br><br>
+   <p class="info">
+    भगवद्‌गीता हा प्राचीन भारतीय तत्त्वज्ञानविषयक ग्रंथ आहे. वेदांच्या अखेरच्या रचनेतील एक ग्रंथ. 'गीतोपनिषद' म्हणूनही प्रसिद्ध. त्यात भगवान श्रीकृष्णांनी अर्जुनाला जीवनाबद्दल केलेला उपदेश आहे.<br>
+    भगवद्गीता हा हिंदुस्थानातला अतिशय महत्त्वाचा व मानवी इतिहासातल्या ग्रंथांपैकी अतिशय तत्त्वज्ञानावर आधारलेला महत्त्वाचा संदर्भग्रंथ आहे. हा ग्रंथ संस्कृत भाषेत काव्यस्वरूपात लिहिलेला आहे. 'महाभारत' या महाकाव्याचा एक भाग असलेला हा ग्रंथ १८ अध्यायांचा (७०० श्लोक) आहे. महाभारतातल्या महायुद्धाच्या वेळेस भगवान श्रीकृष्णांनी गीता अर्जुनास मार्गदर्शन स्वरूपात सांगितली, असे महाभारताच्या कथेत म्हटले आहे. हिंदू (वैदिक) धर्माच्या मते भगवान श्रीकृष्ण हे भगवान विष्णूंचे स्वरूप मानले जातात. हा ग्रंथ मानवाला परमोच्च ज्ञान देतो आणि जीवन कसे जगावे यांचे मार्गदर्शन करतो असे मानले जाते. सामान्यजनांमध्ये भगवत्-गीता, 'गीता' या नावाने ओळखली जाते.
     
 </body>
 </html>
